@@ -158,28 +158,7 @@ ArgParser::argCopyright()
 void
 ArgParser::argJsonHelp()
 {
-    // Make sure the output looks right on an 80-column display.
-    //               1         2         3         4         5         6         7         8
-    //      12345678901234567890123456789012345678901234567890123456789012345678901234567890
-    std::cout
-        << "The json block below contains the same structure with the same keys as the"
-        << std::endl
-        << "json generated by qpdf. In the block below, the values are descriptions of"
-        << std::endl
-        << "the meanings of those entries. The specific contract guaranteed by qpdf in"
-        << std::endl
-        << "its json representation is explained in more detail in the manual. You can"
-        << std::endl
-        << "specify a subset of top-level keys when you invoke qpdf, but the \"version\""
-        << std::endl
-        << "and \"parameters\" keys will always be present. Note that the \"encrypt\""
-        << std::endl
-        << "key's values will be populated for non-encrypted files. Some values will"
-        << std::endl
-        << "be null, and others will have values that apply to unencrypted files."
-        << std::endl
-        << QPDFJob::json_out_schema_v1()
-        << std::endl;
+    std::cout << QPDFJob::json_out_schema_v1() << std::endl;
 }
 
 void
