@@ -1,5 +1,8 @@
 2022-01-31  Jay Berkenbilt  <ejb@ql.org>
 
+	* Have --json-help just output the JSON object, leaving a
+	description to --help and the manual.
+
 	* Allow optional version number or "latest" as parameter to
 	--json, allowing for future specification of json version.
 
